--- a/html.html
+++ b/html.html
@@ -14,9 +14,9 @@
         <!-- tab -->
         <div class="tab ul-tab">
             <ul class="tab_list" role="tablist">
-                <li class="on"><a href="#con01" role="button" aria-selected="true" title="선택됨">탭1</a></li>
-                <li><a href="#con02" role="button" aria-selected="false">탭2</a></li>
-                <li><a href="#con03" role="button" aria-selected="false">탭3</a></li>
+                <li class="on"><a href="#con01" role="button">탭1</a></li>
+                <li><a href="#con02" role="button">탭2</a></li>
+                <li><a href="#con03" role="button">탭3</a></li>
             </ul>
             <div id="con01" class="tab_panel on" role="tabpanel">탭1내용</div>
             <div id="con02" class="tab_panel" role="tabpanel">탭2내용</div>
@@ -25,9 +25,9 @@
         <!-- //tab -->
         <br><br>
         <!-- scroll tab -->
-        <div class="scroll_area ul-tab">
+        <div class="tab ul-tab">
             <ul class="scroll_list scroll" role="tablist">
-                <li><a href="#">부추김치</a></li>
+                <li class="on"><a href="#">부추김치</a></li>
                 <li><a href="#">배추김치</a></li>
                 <li><a href="#">열무김치</a></li>
                 <li><a href="#">갓김치</a></li>
@@ -38,16 +38,16 @@
                 <li><a href="#">오이소박이</a></li>
                 <li><a href="#">홍진경 김치</a></li>
             </ul>
-            <div class="list_wrap on" role="tabpanel">부추김치</div>
-            <div class="list_wrap" role="tabpanel">배추김치</div>
-            <div class="list_wrap" role="tabpanel">열무김치</div>
-            <div class="list_wrap" role="tabpanel">갓김치</div>
-            <div class="list_wrap" role="tabpanel">파김치</div>
-            <div class="list_wrap" role="tabpanel">백김치</div>
-            <div class="list_wrap" role="tabpanel">겉절이</div>
-            <div class="list_wrap" role="tabpanel">동치미</div>
-            <div class="list_wrap" role="tabpanel">오이소박이</div>
-            <div class="list_wrap" role="tabpanel">홍진경 김치</div>
+            <div class="tab_panel on" role="tabpanel">부추김치</div>
+            <div class="tab_panel" role="tabpanel">배추김치</div>
+            <div class="tab_panel" role="tabpanel">열무김치</div>
+            <div class="tab_panel" role="tabpanel">갓김치</div>
+            <div class="tab_panel" role="tabpanel">파김치</div>
+            <div class="tab_panel" role="tabpanel">백김치</div>
+            <div class="tab_panel" role="tabpanel">겉절이</div>
+            <div class="tab_panel" role="tabpanel">동치미</div>
+            <div class="tab_panel" role="tabpanel">오이소박이</div>
+            <div class="tab_panel" role="tabpanel">홍진경 김치</div>
         </div>
           
         <!-- //scroll tab -->
