--- a/html.html
+++ b/html.html
@@ -48,10 +48,29 @@
             <div class="tab_panel" role="tabpanel">동치미</div>
             <div class="tab_panel" role="tabpanel">오이소박이</div>
             <div class="tab_panel" role="tabpanel">홍진경 김치</div>
-
         </div>
-          
         <!-- //scroll tab -->
+
+        <!-- 평점 -->
+        <div class="review_area">
+            <strong class="tit">빵미베이커리는 어떠셨나요?</strong>
+            <div class="star_inner">
+                <div class="star_item">
+                    <span class="star" aria-label="평점1점"></span>
+                    <span class="star" aria-label="평점2점"></span>
+                    <span class="star" aria-label="평점3점"></span>
+                    <span class="star" aria-label="평점4점"></span>
+                    <span class="star" aria-label="평점5점"></span>
+                </div>
+                <strong class="default">선택해주세요</strong>
+                <strong class="star_text">별로예요</strong>
+                <strong class="star_text">조금 아쉬워요</strong>
+                <strong class="star_text">보통이예요</strong>
+                <strong class="star_text">좋아요</strong>
+                <strong class="star_text">최고예요</strong>
+            </div>
+        </div>
+        <!-- //평점-->
     </div>
 </body>
 </html>
