별점 첫째 찾기 실패

--- a/html.html
+++ b/html.html
@@ -56,18 +56,13 @@
             <strong class="tit">빵미베이커리는 어떠셨나요?</strong>
             <div class="star_inner">
                 <div class="star_item">
-                    <span class="star" aria-label="평점1점"></span>
-                    <span class="star" aria-label="평점2점"></span>
-                    <span class="star" aria-label="평점3점"></span>
-                    <span class="star" aria-label="평점4점"></span>
-                    <span class="star" aria-label="평점5점"></span>
+                    <span class="star"></span>
+                    <span class="star"></span>
+                    <span class="star"></span>
+                    <span class="star"></span>
+                    <span class="star"></span>
                 </div>
                 <strong class="default">선택해주세요</strong>
-                <strong class="star_text">별로예요</strong>
-                <strong class="star_text">조금 아쉬워요</strong>
-                <strong class="star_text">보통이예요</strong>
-                <strong class="star_text">좋아요</strong>
-                <strong class="star_text">최고예요</strong>
             </div>
         </div>
         <!-- //평점-->
