--- a/html.html
+++ b/html.html
@@ -66,6 +66,25 @@
             </div>
         </div>
         <!-- //평점-->
+
+        <!-- 전체동의 -->
+        <div class="agree_box">
+            <div class="check_all">
+                <label for="check"><input type="checkbox" name="check" id="check">전체선택</label>
+            </div>
+            <ul class="check_list">
+                <li>
+                    <label for="check1"><input type="checkbox" name="check" id="check1">필수1</label>
+                </li>
+                <li>
+                    <label for="check2"><input type="checkbox" name="check" id="check2">필수2</label>
+                </li>
+                <li>
+                    <label for="check3"><input type="checkbox" name="check" id="check3">필수3</label>
+                </li>
+            </ul>
+        </div>
+        <!-- //전체동의-->
     </div>
 </body>
 </html>
